# nexorious

./: .dockerignore  .env.example  .envrc  .git-blame-ignore-revs  .gitignore  .golangci.yml  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEV.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  Taskfile.yml  devenv.nix  devenv.yaml  docker-compose.yml  flake.nix  go.mod  go.sum  pyrightconfig.json  release-please-config.json  result-1  slumber.yaml  sqlc.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  debug_json_serialization.py  debug_refresh.py  devenv.nix  main.py  pyproject.toml  test_game_addition.py  test_simple_refresh.py  verify_spec.py
backend/alembic/: env.py
backend/alembic/versions/: 02fe85fd9ec7_add_default_storefront_relationship_to_.py  12c1f1727159_add_cascade_delete_to_user_game_.py  1c960000d15e_add_no_longer_owned_ownership_status.py  1dd983a1ed58_remove_email_column_from_users_table.py  2ef4c8daba74_initial_database_schema.py  3b8062b0037d_add_igdb_platform_ids_field_to_games_.py  403047671e7b_add_updated_at_field_to_user_game_.py  5d4811469120_remove_physical_fields_from_user_games_.py  5eaf19101a5a_add_igdb_slug_field_to_games_table.py  6487696333e5_make_igdb_id_field_required_for_igdb_.py  68af15b2b34b_add_igdb_platform_names_field_to_games_.py  (+8 more)
backend/app/: __init__.py  main.py
backend/docs/: sqlalchemy-mapped-annotations.md
backend/nexorious/: main.py
backend/scripts/: README.md  __init__.py  darkadia_to_nexorious.py  import_darkadia_csv.py  validate_import_scenarios.py
(+2515 files in other folders)
